Fix : FIxed Text Overflow

--- a/src/components/ArchiveNote/ArchiveNote.module.css
+++ b/src/components/ArchiveNote/ArchiveNote.module.css
@@ -1,11 +1,12 @@
 .note {
   min-width: 15rem;
-  max-height: 15rem;
-  height: fit-content;
+  min-height: 20rem;
+  height: 20rem;
   padding: 1rem;
   border-radius: 8px;
   align-items: flex-start;
-  margin: 0 1rem 1rem 0;
+  margin: 0 1rem 1.5rem 0;
+  width: 100%;
 }
 
 .enlargeNote {
@@ -20,11 +21,31 @@
 
 .note_content {
   text-align: left;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  height: 80%;
+  width: 100%;
 }
 
+.note_title {
+  position: absolute;
+  top: 10px;
+  padding: 0.5rem 0;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+}
 .note_title,
 .note_body {
-  width: 100%;
+  width: 70%;
+}
+
+.note_body {
+  line-clamp: 6;
+  margin-top: 2rem;
+  width: 90%;
+  height: 90%;
 }
 
 .note_footer {
@@ -43,7 +64,7 @@
 
 .enlargeOption {
   transform: scaleY(1);
-  transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 500ms 500ms;
+  transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 500ms;
 }
 
 .hideOption {
